prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/assign_to_optional_7.diag.txt
ERROR: can't assign to expression
testData/diagnostics/assign_to_optional_7.nut:2:0

local v = {v = {v = 0}}
v.v ?? v = 3
^-------


